--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,19 @@
-{{#each posts as |post|}}
-<a class="list-group btn list-item main-list single-post" href="/posts/{{post.id}}">
-    <span class="float-left">{{post.title}}</span>
-    <span class="float-right">Posted by: {{user.name}} on {{format_date createdAt}}</span>
-</a>
-{{/each}}
+<main class="container mt-5">
+  <h1 class="mb-4 text-white">Tech Blog Posts:</h1>
+  <div class="row">
+    {{#each posts}}
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <div class="card-header bg-warning">
+            <h2 class="card-title">
+              <a href="/post/{{id}}" class="text-dark">{{title}}</a>
+            </h2>
+          </div>
+          <div class="card-body text-dark">
+            <p>Created by: {{user.username}} Date: {{format_date createdAt}}</p>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</main>
