--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>Tech-Blog</title>
+    <title>Heather's Tech Blog</title>
     </head>
 
 <body>
@@ -15,25 +15,31 @@
             <nav class="nav-bar mb-3">
                 <a href="/">Home</a>
                 {{#if logged_in}}
-                <a class="text-warning disabled">Welcome {{logged_name}}!</a>
+                <a class="text-warning disabled">Welcome! </a>
                 <a href="/dashboard">Dashboard</a>
-                <a href="/" id="logout">Logout</a>
+                <a href="#" id="tech-logout">Logout</a>
                 {{else}}
                 <a href="/login">Login</a>
                 {{/if}}
             </nav>
             <div class="header-box rounded">
-                <a href="/" class="header-txt">The Tech Blog</a>
+                <a href="/" class="header-txt">My Tech Blog</a>
             </div>
         </header>
         <main class="container container-fluid mt-5">
-            {{!-- Renderer the main page --}}
             {{{ body }}}
         </main>
         <footer class="d-flex justify-content-center mt-5">
-            The Tech Blog
+            The Tech Blog by: Heather Summers
         </footer>
     </div>
+    <script src="/js/delete-post.js"></script>
+    <script src="/js/login.js"></script>
+    <script src="/js/logout.js"></script>
+    <script src="/js/new-post.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="/js/edit-post.js"></script>
+    <script src="/js/new-comment.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
