--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,18 +1,26 @@
-<div class="card">
-    <div class="card-header new-post">
-        Create New Post
+<div class="container mt-5">
+  <h2 class="mb-4">Create a Blog Post</h2>
+  <form class="new-tech-post-form">
+    <div class="mb-3">
+      <label for="title-new-tech-post" class="form-label">Title:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="title-new-tech-post"
+        placeholder="Enter a title"
+      />
     </div>
-    <form method="POST" action="/api/posts" class="card-body">
-        <div class="form-group">
-            <label class="form-label" for="title">Title</label>
-            <input type="text" name="title" class="col-sm-12 form-input" id="title" />
-        </div>
-        <div class="form-group">
-            <label class="form-label" for="content">Content</label>
-            <textarea type="text" name="content" class="col-sm-12 form-input" id="content"></textarea>
-        </div>
-        <div class="form-group newpost-btn">
-            <button type="submit" class="col-sm-12 btn btn-dark" id="create-post">Create</button>
-        </div>
-    </form>
+    <div class="mb-3">
+      <label for="content-new-tech-post" class="form-label">Content:</label>
+      <textarea
+        class="form-control"
+        id="content-new-tech-post"
+        rows="5"
+        placeholder="Enter content here"
+      ></textarea>
+    </div>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-primary">Create Post</button>
+    </div>
+  </form>
 </div>
