--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,14 +5,20 @@
       <a href="/newpost" class="btn btn-primary">Create a New Blog Post</a>
     </div>
   </div>
-  <br>
+  <br />
   <h1 class="mb-4">Tech Blog Contributions:</h1>
   {{#each posts}}
     <div class="post-container post mb-3">
-      <h2><a href="/post/{{id}}" class="text-decoration-none text-reset">{{title}}</a></h2>
+      <h2><a
+          href="/post/{{id}}"
+          class="text-decoration-none text-reset"
+        >{{title}}</a></h2>
       <p>Created by: {{user.username}} | Date: {{format_date createdAt}}</p>
       <a href="/editpost/{{id}}" class="btn btn-warning">Edit Post</a>
-      <button class="btn btn-danger delete-post" data-post-id="{{id}}">Delete</button>
+      <button
+        class="btn btn-danger delete-post"
+        data-post-id="{{id}}"
+      >Delete</button>
     </div>
   {{/each}}
 </main>
