--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,33 @@
 <div class="container">
-    <div class="col-sm-12 log-form">
-        <div class="login-text">
-            <h2 class="page-title">Login</h2>
-        </div>
-        <form id="tech-login-form">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username:</label>
-                <input class="form-control" type="text" id="username-tech-login" placeholder="Username"/>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password:</label>
-                <input class="form-control" type="password" id="password-tech-login" placeholder="Password" />
-            </div>
-            <div class="mb-3">
-                <button class="col-sm-12 btn btn-primary" type="submit">Login</button>
-            </div>
-            <a class="nav-link text-center" href="/signup">Sign up Instead!</a>
-        </form>
+  <div class="col-sm-12 log-form">
+    <div class="login-text">
+      <h2 class="page-title">Login</h2>
     </div>
+    <form id="tech-login-form">
+      <div class="mb-3">
+        <label for="username" class="form-label">Username:</label>
+        <input
+          class="form-control"
+          type="text"
+          id="username-tech-login"
+          placeholder="Username"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password:</label>
+        <input
+          class="form-control"
+          type="password"
+          id="password-tech-login"
+          placeholder="Password"
+        />
+      </div>
+      <div class="mb-3">
+        <button class="col-sm-12 btn btn-primary" type="submit">Login</button>
+      </div>
+      <a class="nav-link text-center" href="/signup">Sign up Instead!</a>
+    </form>
+  </div>
 </div>
 
 <script src="./js/login.js"></script>
