--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,4 @@
-{{!-- views/post.handlebars file --}}
+{{! views/post.handlebars file }}
 <main class="container mt-5">
   <article>
     <h1>{{title}}</h1>
