--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,27 +1,43 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-12 sign-form">
-            <h2 class="page-title">Sign Up</h2>
-            <form id="signup-form">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username:</label>
-                    <input class="form-control" type="text" id="username" placeholder="Username" />
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email" />
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password:</label>
-                    <input class="form-control" type="password" id="password" placeholder="Password must be over (8) characters long"/>
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary" type="submit">Sign Up</button>
-                </div>
-                <a class="nav-link text-center" href="/login">Login If you have an account!</a>
-            </form>
+  <div class="row">
+    <div class="col-sm-12 sign-form">
+      <h2 class="page-title">Sign Up</h2>
+      <form id="signup-form">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username:</label>
+          <input
+            class="form-control"
+            type="text"
+            id="username"
+            placeholder="Username"
+          />
         </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email:</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="Email"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password:</label>
+          <input
+            class="form-control"
+            type="password"
+            id="password"
+            placeholder="Password must be over (8) characters long"
+          />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">Sign Up</button>
+        </div>
+        <a class="nav-link text-center" href="/login">Login If you have an
+          account!</a>
+      </form>
     </div>
+  </div>
 </div>
 
 <script src="./js/signup.js"></script>
